# sound-o-hedron

./: .gitignore  .gitmodules
NanoDMXReceiver/: NanoDMXReceiver.ino
PicoAudioDMXReceiver/: CMakeLists.txt  fft_utils.c  fft_utils.h  main.cpp
TeensyDodeca/: 00_global_const.ino  00_global_func.ino  0_const.ino  0_faces.ino  0_global_func.ino  0_palettes.ino  1_demo.ino  1_midi.ino  2_blink.ino  2_dodecaimpulse.ino  2_dodecaimpulsehalf.ino  2_fill.ino  2_flash.ino  2_ghosting.ino  2_impulse.ino  2_march.ino  2_march_repl.ino  2_ripple.ino  2_strobe.ino  90_process.ino  TeensyDodeca.ino  structs.h
kicad/: _autosave-kicad.sch  fp-info-cache  kicad-cache.lib  kicad-rescue.kicad_sym  kicad.kicad_pcb  kicad.kicad_pcb-bak  kicad.kicad_pro  kicad.kicad_sch  kicad.net  kicad.pro  kicad.sch  kicad.sch-bak  kicad.xml  local.bck  local.dcm  local.lib  sym-lib-table
kicad/local.pretty/: DIP-8_MAX485_MODULE.kicad_mod
kicad/plots/: kicad-B_Cu.gbr  kicad-B_Mask.gbr  kicad-B_SilkS.gbr  kicad-Edge_Cuts.gbr  kicad-F_Cu.gbr  kicad-F_Mask.gbr  kicad-F_SilkS.gbr  kicad-job.gbrjob  kicad.drl
